maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:39: error: ':' expected but ')' found.
def isDirFree(dir) : Boolean = {
                 ^PledgeMaze:47: error: identifier expected but '}' found.
}
^